Fixed select styling on Firefox

--- a/app/static/components/snippetpanel/snippetpanel.less
+++ b/app/static/components/snippetpanel/snippetpanel.less
@@ -312,6 +312,30 @@
                         background: url(./components/snippetpanel/arrow-down.png) no-repeat right;
                         background-size: 34px 34px;
                         -webkit-appearance: none;
+                        -moz-appearance: none;
+                    }
+                    .browser-firefox .selectContainer {
+                        float: right;
+                        margin-right:10px;
+                        overflow: hidden;
+                        width: 168px;
+                        height:24px;
+                        border-radius: 4px;
+                        border: 1px solid #CCC;
+                        background: url(./components/snippetpanel/arrow-down.png) no-repeat right;
+                        background-size: 34px 34px;
+                        outline: none !important;
+                    }
+                    .browser-firefox .selectContainer .languageSelect {
+                        float: none;
+                        width: 188px;
+                        border: none;
+                        background: none;
+                        color:rgba(0,0,0,0);
+                        text-shadow: 0 0 0 #000;
+                        padding-left: 0;
+                    }
+                    .browser-firefox .selectContainer .languageSelect:focus {
                     }
 
 .snippetDeleteDialog {
